test/expected/set_expl.out
set expl
    ^
5: error: "expl": ambiguous set option; could be "explain-by-default" or "explicit-int"
